added CoreUI and updated the initial UI views

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,7 +6,18 @@
 @import 'variables';
 
 // Bootstrap
-@import '~bootstrap/scss/bootstrap';
+// @import '~bootstrap/scss/bootstrap';
+
+// Import styles
+@import "~@coreui/coreui/scss/coreui";
+
+// Font awesome
+@import "node_modules/font-awesome/scss/font-awesome.scss";
+@import "node_modules/simple-line-icons/scss/simple-line-icons.scss";
+
+// If you want to add something do it here
+@import "custom";
+
 
 .navbar-laravel {
   background-color: #fff;
